# mc5

./: .gitignore  Cargo.toml  mango_chainsaw.default.yaml  mc5.yaml  readme.md  structure.md
mc5_core/: Cargo.toml
mc5_core/src/: bucket.rs  config.rs  errors.rs  label.rs  lib.rs  mango.rs  mc.rs
mc5_core/tests/: integration.rs
mc5_extra/: Cargo.toml
mc5_extra/src/: config.rs  errors.rs  lib.rs  server.rs
src/: bucket.rs  errors.rs  label.rs  lib.rs  mc.rs
