[package]
name = "mc5_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10.19", features = ["yaml", "serde_yaml"] }
flexbuffers = "2.0.0"
serde = { version = "1.0.201", features = ["derive"] }
sled = { version = "0.34.7", features = ["compression"] }
thiserror = "1.0.60"
tracing = "0.1"
uuid = { version = "1.8.0", features = ["v6", "rng"] }

[dev-dependencies]
anyhow = "1.0.86"
memmap2 = "0.9"
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
walkdir = "2.5.0"
