[package]
name = "mc5_extra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mc5_server"
path = "bin/mc5_server.rs"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["ws", "multipart", "http2"] }
clap = { version = "4.5.4", features = ["derive"] }
figment = { version = "0.10.19", features = ["yaml"] }
flexbuffers = "2.0.0"
futures = "0.3"
mc5_core = { path = "../mc5_core" } 
serde = { version = "1.0.201", features = ["derive"] }
sled = { version = "0.34.7", features = ["compression"] }
thiserror = "1.0.60"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
uuid = { version = "1.8.0", features = ["v6", "rng"] }
